# Guidebot

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
skills/: core.md
src/guidebot/: __init__.py  agent.py  bus.py  cli.py  evolution.py  hub.py  models.py  safety.py
src/guidebot/devices/: __init__.py  base.py  simulated.py
tests/: test_evolution.py  test_hub.py
