[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guidebot"
version = "0.1.0"
description = "Safety-first adaptive agent runtime for a desktop companion robot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Guidebot contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
guidebot = "guidebot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/guidebot"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
